--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ body {
 }
 
 .header-menu {
+  display: flex;
   color: var(--navy-blue);
 }
 .header-menu:hover {
@@ -227,3 +228,4 @@ body {
   color: var(--white);
   background-color: var(--ocean);
 }
+/* --------------------------------------------------------Геометрия---------------------------------------------------------------------- */
