--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,20 @@
   --e7e9fc: #e7e9fc;
   --gray: #434455;
 }
+/* ------------------------------------------------- инструменты------------------------------------------------------------ */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0px;
+}
+ul {
+  padding-left: 0px;
+}
 /*-------------------------------------------------- body------------------------------------------------------------------- */
 body {
   background-color: var(--white);
@@ -18,6 +32,9 @@ body {
   color: var(--navy-blue);
 }
 .logo {
+  margin-right: 76px;
+  display: flex;
+  align-items: center;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -56,13 +73,26 @@ body {
 .header-text:focus {
   color: var(--ocean);
 }
-.header-contacts:hover{
-  color: var(--ocean)
+.header-contacts:hover {
+  color: var(--ocean);
 }
-.header-contacts:focus{
-  color: var(--ocean)
+.header-contacts:focus {
+  color: var(--ocean);
 }
-
+.address .link.link:not(:last-child) {
+  margin-right: 40px;
+  background-color: tomato;
+}
+.link-header {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background-color: tomato;
+  margin-right: 40px;
+}
+.link-header:not(:last-child) {
+  margin-right: 40px;
+}
 .header-menu {
   display: flex;
   color: var(--navy-blue);
@@ -83,23 +113,29 @@ body {
 .hero-container {
   background: var(--navy-blue);
 }
-.hero-text-container {
+.hero-text-title {
+  width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
+
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
   color: var(--white);
 }
 .hero-btn {
+  border-radius: 4px;
+  border-color: transparent;
+  padding: 16px 32px;
+  align-items: center;
   background-color: var(--iris);
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.04em;
   color: var(--white);
   cursor: pointer;
@@ -113,6 +149,16 @@ body {
 }
 
 /*-------------------------------------------------- section2------------------------------------------------------------------- */
+.about-hero {
+  outline: 4px solid orange;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.about-hero .list {
+  display: flex;
+
+  align-items: center;
+}
 .caption-texts {
   font-weight: 500;
   font-size: 20px;
@@ -141,7 +187,13 @@ body {
 .hero-team {
   background-color: var(--f4f4fd);
 }
+.hero-team .list {
+  display: flex;
+  gap: 24px;
+}
+
 .team-caption {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -151,6 +203,9 @@ body {
   color: var(--navy-blue);
 }
 .our-employees {
+  text-align: center;
+  padding-top: 32px;
+  padding-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -159,6 +214,7 @@ body {
   color: var(--navy-blue);
 }
 .empl-comment {
+  padding-bottom: 32px;
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
@@ -168,8 +224,11 @@ body {
 /*-------------------------------------------------- section4------------------------------------------------------------------- */
 .hero-li {
   background-color: var(--white);
+  border-radius: 0px 0px 4px 4px;
 }
 .footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
   background-color: var(--navy-blue);
 }
 .footer-logo {
@@ -187,6 +246,9 @@ body {
   color: var(--f4f4fd);
 }
 .footer-comment {
+  width: 264px;
+  text-align: start;
+  padding-top: 16px;
   font-size: 16px;
   line-height: 1.17;
   letter-spacing: 0.02em;
@@ -194,6 +256,10 @@ body {
 }
 /*-------------------------------------------------- portfolio------------------------------------------------------------------- */
 .photo-text {
+  text-align: start;
+  padding-top: 32px;
+  padding-bottom: 8px;
+  padding-left: 16px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -201,6 +267,8 @@ body {
   color: var(--navy-blue);
 }
 .photo-comment {
+  padding-bottom: 32px;
+  padding-left: 16px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -229,3 +297,46 @@ body {
   background-color: var(--ocean);
 }
 /* --------------------------------------------------------Геометрия---------------------------------------------------------------------- */
+
+.header {
+  display: flex;
+  align-items: center;
+
+  outline: 5px solid teal;
+}
+.container {
+  margin: 0 auto;
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.address {
+  margin-left: auto;
+}
+.section-container {
+  outline: 2px solid brown;
+  padding-top: 188px;
+  padding-bottom: 188px;
+  text-align: center;
+}
+.work-hero .list {
+  display: flex;
+  margin-top: 72px;
+
+  gap: 24px;
+}
+
+.work-hero {
+  padding-bottom: 120px;
+  outline: 4px solid tomato;
+}
+.hero-team {
+  outline: 4px solid tomato;
+}
+/* portfolio */
+.photo-container {
+  display: flex;
+  gap: 48px 18px;
+  flex-wrap: wrap;
+  outline: 4px solid tomato;
+}
