--- a/css/styles.css
+++ b/css/styles.css
@@ -188,14 +188,18 @@ body {
 }
 /*-------------------------------------------------- section4------------------------------------------------------------------- */
 .hero-team {
+  padding-bottom: 120px;
   background-color: var(--f4f4fd);
 }
 .hero-team .list {
+  
   display: flex;
   gap: 24px;
 }
 
 .team-caption {
+  
+  padding-top:120px;
   margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
@@ -206,6 +210,7 @@ body {
   color: var(--navy-blue);
 }
 .our-employees {
+  
   text-align: center;
   padding-top: 32px;
   padding-bottom: 8px;
@@ -217,6 +222,7 @@ body {
   color: var(--navy-blue);
 }
 .empl-comment {
+  
   padding-bottom: 32px;
   font-size: 16px;
   line-height: 1.5;
