--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ img {
   margin: -1px;
   border: 0;
   padding: 0;
-  
+
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -176,8 +176,8 @@ body {
   display: flex;
   gap: 24px;
 }
-.caption-list{
-  flex-basis: calc((100%-3*24)/4);
+.caption-list {
+  flex-basis: calc((100%-3 * 24) / 4);
 }
 .caption-texts {
   font-weight: 500;
@@ -215,7 +215,6 @@ body {
 }
 
 .team-caption {
-  
   margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
@@ -237,7 +236,6 @@ body {
   color: var(--navy-blue);
 }
 .empl-comment {
-  
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
@@ -257,7 +255,6 @@ body {
   background-color: var(--navy-blue);
 }
 .footer-logo {
-  
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -283,9 +280,7 @@ body {
 /*-------------------------------------------------- portfolio------------------------------------------------------------------- */
 .photo-text {
   text-align: start;
-  padding-top: 32px;
-  padding-bottom: 8px;
-  padding-left: 16px;
+
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -293,8 +288,6 @@ body {
   color: var(--navy-blue);
 }
 .photo-comment {
-  padding-bottom: 32px;
-  padding-left: 16px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -329,7 +322,7 @@ body {
 .header {
   display: flex;
   align-items: center;
-border-bottom: 1px solid var(--e7e9fc);
+  border-bottom: 1px solid var(--e7e9fc);
   /* outline: 5px solid teal; */
 }
 .container {
@@ -371,11 +364,18 @@ border-bottom: 1px solid var(--e7e9fc);
   justify-content: center;
   display: flex;
   gap: 24px;
-  padding-top: 93px;
-  padding-bottom: 75px;
+
+  margin-bottom: 75px;
   align-items: center;
 }
 .bottom-text {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-right: 16px;
+  padding-left: 16px;
   border: 1px solid var(--e7e9fc);
   border-top: none;
+}
+.porftolio-section {
+  padding-top: 93px;
 }
