--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
 }
 .logo {
   margin-right: 76px;
-  display: flex;
+
   align-items: center;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -67,6 +67,9 @@ body {
   list-style-type: none;
 }
 .header-text {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -100,15 +103,14 @@ body {
   /* background-color: tomato; */
 }
 .link-header {
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
   /* background-color: tomato; */
 }
 .link-header:not(:last-child) {
   margin-right: 40px;
 }
 .header-menu {
+  gap: 40px;
+  align-items: center;
   display: flex;
   color: var(--navy-blue);
 }
@@ -180,6 +182,7 @@ body {
   flex-basis: calc((100%-3 * 24) / 4);
 }
 .caption-texts {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -226,8 +229,8 @@ body {
 }
 .our-employees {
   text-align: center;
-  padding-top: 32px;
-  padding-bottom: 8px;
+  margin-top: 32px;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -280,7 +283,7 @@ body {
 /*-------------------------------------------------- portfolio------------------------------------------------------------------- */
 .photo-text {
   text-align: start;
-
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -295,7 +298,7 @@ body {
 }
 .btn {
   border-radius: 4px;
-  border-color: transparent;
+  border: 1px solid #e7e9fc;
   padding: 12px 24px;
 
   font-family: "Roboto", sans-serif;
@@ -310,18 +313,21 @@ body {
   background-color: var(--f4f4fd);
 }
 .btn:hover {
+  border-color: transparent;
   color: var(--white);
   background-color: var(--ocean);
 }
 .btn:focus {
+  border-color: transparent;
   color: var(--white);
   background-color: var(--ocean);
 }
 /* --------------------------------------------------------Геометрия---------------------------------------------------------------------- */
-
-.header {
+.header-container {
   display: flex;
   align-items: center;
+}
+.header {
   border-bottom: 1px solid var(--e7e9fc);
   /* outline: 5px solid teal; */
 }
