--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,12 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.link {
+  text-decoration: none;
+}
+.list {
+  list-style-type: none;
+}
 /*-------------------------------------------------- body------------------------------------------------------------------- */
 body {
   background-color: var(--white);
@@ -44,12 +50,16 @@ body {
   color: var(--gray);
 }
 /*-------------------------------------------------- header------------------------------------------------------------------- */
-.logo-span {
-  color: var(--navy-blue);
+.header {
+  border-bottom: 1px solid var(--e7e9fc);
+  /* outline: 5px solid teal; */
 }
-.logo {
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.header-logo {
   margin-right: 76px;
-
   align-items: center;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -60,13 +70,14 @@ body {
   letter-spacing: 0.03em;
   color: var(--iris);
 }
-.link {
-  text-decoration: none;
+.header-logo-span {
+  color: var(--navy-blue);
 }
-.list {
-  list-style-type: none;
-}
-.header-text {
+
+
+.header-link-text
+{
+  
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -75,6 +86,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
+
 }
 .header-contacts {
   letter-spacing: 0.02em;
@@ -98,34 +110,35 @@ body {
 .header-contacts:focus {
   color: var(--ocean);
 }
-.address.link:not(:last-child) {
-  margin-right: 40px;
-  /* background-color: tomato; */
-}
+
 .link-header {
   /* background-color: tomato; */
 }
-.link-header:not(:last-child) {
-  margin-right: 40px;
-}
-.header-menu {
-  gap: 40px;
+
+.header-nav{
+   gap: 40px;
   align-items: center;
   display: flex;
   color: var(--navy-blue);
 }
-.header-menu:hover {
+.address-menu {
+  gap: 40px;
+  display: flex;
+  align-items: center;
+  color: var(--navy-blue);
+}
+
+.header-nav :hover , 
+.header-nav :focus
+{
   color: var(--ocean);
 }
-.header-menu:focus {
-  color: var(--ocean);
-}
-.address {
+.header-address {
+  margin-left: auto;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   color: var(--gray);
 }
-
 /*-------------------------------------------------- section1------------------------------------------------------------------- */
 .hero-section {
   padding-top: 188px;
@@ -323,23 +336,14 @@ body {
   background-color: var(--ocean);
 }
 /* --------------------------------------------------------Геометрия---------------------------------------------------------------------- */
-.header-container {
-  display: flex;
-  align-items: center;
-}
-.header {
-  border-bottom: 1px solid var(--e7e9fc);
-  /* outline: 5px solid teal; */
-}
+
 .container {
   margin: 0 auto;
   width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
 }
-.address {
-  margin-left: auto;
-}
+
 .section-container {
   /* outline: 2px solid brown; */
 }
@@ -383,5 +387,6 @@ body {
   border-top: none;
 }
 .porftolio-section {
+  padding-bottom: 120px;
   padding-top: 93px;
 }
